--- a/_includes/header-post.html
+++ b/_includes/header-post.html
@@ -12,5 +12,6 @@
         {% endif %}
         <h1 class="post-title" itemprop="name">{{ page.title }}</h1>
         <p itemprop="description" class="subtitle">{{ page.description }}</p>
+        <p><a href="{{site.repository_url}}{{page.path}}">Improve this doc</a></p>
     </div>
 </header>
