--- a/_includes/header-default.html
+++ b/_includes/header-default.html
@@ -2,5 +2,6 @@
     <h1 class="logo">
         <a href="{{site.baseurl}}/"></a>
     </h1>
+    {% include social.html %}
 </header>
 {% include menu-search.html %}
