--- a/src/styl/_header.styl
+++ b/src/styl/_header.styl
@@ -9,6 +9,18 @@ $bg
 		text-align center
 		padding rem(140px) 0 rem(66px)
 
+.icon-small
+	cursor pointer
+	padding rem(2px)
+	border-radius rem(3px)
+	width rem(10px)
+	height rem(10px)
+	fill main
+	color grey
+	font-size small
+	&:hover
+		color red
+
 .bar-header
 	background sec
 	padding rem(10px) rem(20px)
