--- a/src/styl/_header.styl
+++ b/src/styl/_header.styl
@@ -7,7 +7,13 @@ $bg
 	.content
 		width 95%
 		text-align center
-		padding rem(140px) 0 rem(66px)
+		padding rem(110px) 0 rem(46px)
+.menu-link
+	text-decoration none
+	color grey
+	&:hover
+		color green
+		text-decoration underline
 
 .icon-small
 	cursor pointer
@@ -68,7 +74,7 @@ $bg
 		margin 0 0 30px    
 		text-shadow 3px 3px darken(main, 20%)
 		+above(cut)
-			font-size rem(60px)
+			font-size rem(50px)
 	.subtitle
 		mainFont(300)
 		font-size rem(20px)
