--- a/_includes/header-post.html
+++ b/_includes/header-post.html
@@ -13,7 +13,8 @@
         {% endif %}
         <h1 class="post-title" itemprop="name">{{ page.title }}</h1>
         <p itemprop="description" class="subtitle">{{ page.description }}</p>
-        <p><a href="{{site.repository_url}}{{page.path}}">Improve this doc</a></p>
+        <!--<p><a href="{{site.repository_url}}{{page.path}}">Improve this doc</a></p>-->
+         <p><a href="http://javademo.io" class="menu-link"> <i class="fa fa-external-link" aria-hidden="true"></i> Go to the DEMO</a></p>
 
     </div>
 </header>
