--- a/src/styl/_header.styl
+++ b/src/styl/_header.styl
@@ -45,7 +45,7 @@ $bg
 			transition all .4s
 			content 'Javaee.ch'
 			+above(cut)
-				content 'Java, Spring, Angular and Mobile'
+				content 'Java, Spring, Angular and Cloud'
 
 // Header Post
 .header-post
