--- a/src/styl/_hightlight.styl
+++ b/src/styl/_hightlight.styl
@@ -1,9 +1,9 @@
 pre
     background #222
-    width 70%
+    width rem(50)
     padding rem(20px) 0
     color sec
-    margin rem(30px) 0
+    margin rem(30px) auto
     font-size rem(14px)
     +above(cut)
         font-size rem(16px)
@@ -19,7 +19,8 @@ pre
         font-family 'Monaco','Consolas','Menlo',monospace
 
 .highlight
-    margin rem(20px) 0
+    margin rem(20px) auto
+    width rem(50)
     +above(cut)
         word-wrap break-word
     .hll
