--- a/src/styl/_hightlight.styl
+++ b/src/styl/_hightlight.styl
@@ -1,6 +1,6 @@
 pre
     background #222
-    width rem(50)
+    width 100%
     padding rem(20px) 0
     color sec
     margin rem(30px) auto
@@ -20,7 +20,7 @@ pre
 
 .highlight
     margin rem(20px) auto
-    width rem(50)
+    width 100%
     +above(cut)
         word-wrap break-word
     .hll
