--- a/src/styl/_header.styl
+++ b/src/styl/_header.styl
@@ -1,7 +1,6 @@
 html,
 body
 	height 100%
-
 $bg
 	background-color main
 	.content
@@ -75,6 +74,12 @@ $bg
 		text-shadow 3px 3px darken(main, 20%)
 		+above(cut)
 			font-size rem(50px)
+	.demo
+		font-size x-large
+		font-family 'ABeeZee'
+		color darkgray
+		&:hover
+			text-decoration underline;
 	.subtitle
 		mainFont(300)
 		font-size rem(20px)
