--- a/src/styl/_theme-colors.styl
+++ b/src/styl/_theme-colors.styl
@@ -1,11 +1,12 @@
 themes = {
-    post-jekyll: #B31917,
     post-javaee: #2DA0C3,
-    post-js: #D6BA32,
-    post-html: #EB7728,
-    post-svg: #7D669E,
-    post-dev: #637a91,
-    post-spring: #7AAB13
+    post-java: #4682B4,
+    post-spring: #407b15,
+    post-blockchain: #cc3399,
+    post-angular: #CD5C5C,
+    post-typescript: #4169E1,
+    post-other: #696969,
+    post-cloud: #696969,
 }
 
 for theme, category-color in themes
