--- a/src/styl/main.styl
+++ b/src/styl/main.styl
@@ -31,7 +31,7 @@ normalize()
 @import "_home"
 @import "_post"
 @import "_share"
-// @import "_hightlight"
+@import "_hightlight"
 @import "_author"
 @import "_footer"
 @import "_theme-colors"
