--- a/src/styl/_theme-colors.styl
+++ b/src/styl/_theme-colors.styl
@@ -1,5 +1,5 @@
 themes = {
-    post-javaee: #2DA0C3,
+    post-javaee: #06528a,
     post-java: #4682B4,
     post-spring: #407b15,
     post-blockchain: #cc3399,
