--- a/src/styl/_header.styl
+++ b/src/styl/_header.styl
@@ -42,9 +42,9 @@ $bg
 		font-size rem(28px)
 		&:after
 			transition all .4s
-			content 'Javaee.ch'
+			content 'JavaEE.ch'
 			+above(cut)
-				content 'Java, Spring, Angular and Cloud'
+				content 'Java EE, Angular, Vue.js in the Cloud'
 
 // Header Post
 .header-post
