--- a/_includes/header-post.html
+++ b/_includes/header-post.html
@@ -8,7 +8,7 @@
 
 <header class="header-post" role="banner">
      <div class="content">
-        <a href="http://javademo.io"><p class="demo">Java and Angular Demo - <i class="fa fa-external-link" aria-hidden="true"></i>javademo.io</p></a>
+         <a href="https://jref.io"><p class="demo"> Coming Soon! - JRef.io - Java Reference for Dev<i class="fa fa-external-link" aria-hidden="true"></i></p></a>
          {% if page.date %}
             <time itemprop="datePublished" datetime="{{ page.date | date_to_xmlschema }}" class="date">{{ page.date | date_to_string }}</time>
         {% endif %}
