--- a/_includes/header-post.html
+++ b/_includes/header-post.html
@@ -8,7 +8,7 @@
 
 <header class="header-post" role="banner">
      <div class="content">
-         <a href="https://jref.io/conferences"><p class="demo"> Coming Soon! - JRef.io - Java Conferences<i class="fa fa-external-link" aria-hidden="true"></i></p></a>
+         <a href="https://javademo.io"><p class="demo"> JavaDemo.io <i class="fa fa-external-link" aria-hidden="true"></i></p></a>
          {% if page.date %}
             <time itemprop="datePublished" datetime="{{ page.date | date_to_xmlschema }}" class="date">{{ page.date | date_to_string }}</time>
         {% endif %}
