--- a/_includes/header-post.html
+++ b/_includes/header-post.html
@@ -11,6 +11,9 @@
          <a href="https://javademo.io"><p class="demo"> JavaDemo.io <i class="fa fa-external-link" aria-hidden="true"></i></p></a>
          {% if page.date %}
             <time itemprop="datePublished" datetime="{{ page.date | date_to_xmlschema }}" class="date">{{ page.date | date_to_string }}</time>
+         {% endif %}
+         {% if page.updated %}
+            <time itemprop="dateUpdated" datetime="{{ page.updated | date_to_xmlschema }}" class="date">- last update: {{ page.updated | date_to_string }}</time>
         {% endif %}
         <h1 class="post-title" itemprop="name">{{ page.title }}</h1>
         <p itemprop="description" class="subtitle">{{ page.description }}</p>
