--- a/_includes/social.html
+++ b/_includes/social.html
@@ -5,8 +5,8 @@
 <a href="https://www.xing.com/profile/Marco_Molteni" class="icon-small"><i class="fa fa-xing"></i></a>
 <span style="color: grey; font-size: small">&gt;</span>
 -->
-<a href="http://twitter.com/marcomolteni" class="twitter-follow-button" data-show-count="true">Follow @marcomolteni</a>
-<script src="http://platform.twitter.com/widgets.js" type="text/javascript"></script>
+<a href="https://twitter.com/marcomolteni" class="twitter-follow-button" data-show-count="true">Follow @marcomolteni</a>
+<script src="https://platform.twitter.com/widgets.js" type="text/javascript"></script>
 <span  style="color: grey; font-size: small;float: right">
 
  <a class="menu-link" href="http://javademo.io"  target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i> Java and Angular Demo</a> |
