--- a/_includes/author.html
+++ b/_includes/author.html
@@ -3,10 +3,7 @@
         <img itemprop="image" class="img-rounded" src="/assets/img/marco.png" alt="{{site.name}}">
         <p class="def">Author</p>
         <h3 class="name">
-            <a itemprop="name" href="https://plus.google.com/+{{site.gplus_username}}/posts">{{site.username}}</a>
+            Marco Molteni
         </h3>
-        <p class="desc">{{site.user_description}}</p>
-        <p><a itemprop="email" class="email" href="mailto:{{site.email}}">{{site.email}}</a></p>
-        <p><a itemprop="github" class="github" href="https://github.com/{{site.github_username}}">github.com/{{site.github_username}}</a></p>
     </div>
 </section>
