--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -15,4 +15,6 @@
         })();
     </script>
     -->
+    <div id="commento"></div>
+    <script src="https://cdn.commento.io/js/commento.js"></script>
  </section>
