--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,7 @@
                 {{ content }}
             </article>
 
-            {% include share.html %}
+            <!--{% include share.html %}-->
             {% include author.html %}
             {% include comments.html %}
             {% include footer.html %}
