--- a/_includes/header-post.html
+++ b/_includes/header-post.html
@@ -9,8 +9,7 @@
 <header class="header-post" role="banner">
      <div class="content">
          <p class="demo">
-         <a href="https://javademo.io/conferences"> Java Conferences in the World <i class="fa fa-external-link" aria-hidden="true"></i></a>
-             |<a href="https://javademo.io"> JavaDemo.io <i class="fa fa-external-link" aria-hidden="true"></i></a>
+         <a href="{{site.baseurl}}/garbage-collectors-intro"> Video: Garbage collectors for busy Java developers (10 min., no maths ;)) <i class="fa fa-external-link" aria-hidden="true"></i></a>
          </p>
          {% if page.date %}
             <time itemprop="datePublished" datetime="{{ page.date | date_to_xmlschema }}" class="date">{{ page.date | date_to_string }}</time>
