--- a/_includes/social.html
+++ b/_includes/social.html
@@ -9,5 +9,5 @@
 <script src="https://platform.twitter.com/widgets.js" type="text/javascript"></script>
 <span  style="color: grey; font-size: small;float: right">
 
- <a class="menu-link" href="http://javademo.io"  target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i> Java and Angular Demo</a> |
+ <!-- <a class="menu-link" href=""  target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a> |-->
 </span>
