--- a/_includes/social.html
+++ b/_includes/social.html
@@ -5,9 +5,8 @@
 <a href="https://www.xing.com/profile/Marco_Molteni" class="icon-small"><i class="fa fa-xing"></i></a>
 <span style="color: grey; font-size: small">&gt;</span>
 -->
+<div style="display: flex; flex-direction: row">
 <a href="https://twitter.com/marcomolteni" class="twitter-follow-button" data-show-count="true">Follow @marcomolteni</a>
-<script src="https://platform.twitter.com/widgets.js" type="text/javascript"></script>
-<span  style="color: grey; font-size: small;float: right">
-
- <!-- <a class="menu-link" href=""  target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a> |-->
-</span>
+<span><script src="https://platform.twitter.com/widgets.js" type="text/javascript"></script></span>
+<a class="menu-link" href="https://www.linkedin.com/in/javaee/" target="_blank" style="margin-left: 5px"><i class="fa fa-linkedin"></i></a>
+</div>
