--- a/src/styl/_header.styl
+++ b/src/styl/_header.styl
@@ -31,6 +31,8 @@ $bg
 	padding rem(10px) rem(20px)
 	box-shadow 0 -3px 9px #000
 	position fixed
+	display flex
+	flex-direction row
 	width 100%
 	z-index 10
 	.logo
@@ -42,9 +44,9 @@ $bg
 		font-size rem(28px)
 		&:after
 			transition all .4s
-			content 'JavaEE.ch'
+			content 'marco.dev'
 			+above(cut)
-				content 'Java EE, Angular, Vue.js in the Cloud'
+				content 'Java and Angular in the Cloud'
 
 // Header Post
 .header-post
