--- a/_includes/head.html
+++ b/_includes/head.html
@@ -56,7 +56,9 @@
     <meta name="theme-color" content="{{ page.color }}">
     <link href='https://fonts.googleapis.com/css?family=ABeeZee' rel='stylesheet'>
     <link rel="stylesheet" href="{{ "/assets/css/main.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/assets/css/marco.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/assets/css/marco.scss" | prepend: site.baseurl }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
     <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <script src="https://use.fontawesome.com/552ad873ac.js"></script>
 </head>
