--- a/_includes/header-default.html
+++ b/_includes/header-default.html
@@ -1,7 +1,10 @@
-<header class="bar-header">
+<header class="bar-header new-logo">
+    <img src="{{site.baseurl}}/assets/img/marco.png" style="max-width: 50px; max-height: 50px; margin-right: 20px">
+    <div class="new-title">
     <h1 class="logo">
         <a href="{{site.baseurl}}/"></a>
     </h1>
     {% include social.html %}
+    </div>
 </header>
 {% include menu-search.html %}
