--- a/assets/css/marco.scss
+++ b/assets/css/marco.scss
@@ -1,3 +1,6 @@
+---
+---
+
 .new-logo {
   display: flex;
   flex-direction: row;
@@ -6,4 +9,13 @@
 .new-title {
   display: flex;
   flex-direction: column;
+}
+
+.header-post .content {
+  padding-top: 5rem;
+  padding-bottom: 0;
+}
+
+.post-content {
+  padding-top: 10px!important;
 }
