--- a/_includes/head.html
+++ b/_includes/head.html
@@ -57,6 +57,7 @@
     <link href='https://fonts.googleapis.com/css?family=ABeeZee' rel='stylesheet'>
     <link rel="stylesheet" href="{{ "/assets/css/main.css" | prepend: site.baseurl }}">
     <link rel="stylesheet" href="{{ "/assets/css/marco.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/assets/css/highligh.css" | prepend: site.baseurl }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
     <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
     <script src="https://use.fontawesome.com/552ad873ac.js"></script>
